--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     <meta property="og:url" content="https://pjpportfolio.netlify.app/" />
     <meta
       property="og:title"
-      content="Peace Jinadu-Paul | Front-End Web Developer"
+      content="Neda Khedmati | Cloud Engineer | DevOps Engineer"
     />
     <meta
       property="og:description"
